<resources>
    <string name="app_name">Numbers</string>
    <string name="tv_n1">Number 1</string>
    <string name="et_n1">Enter number 1</string>
    <string name="tv_n2">Number 2</string>
    <string name="et_n2">Enter number 2</string>
    <string name="btn_ok">OK</string>
    <string name="tv_n" />
    <string name="btn_add">+</string>
    <string name="btn_subs">-</string>
    <string name="btn_division">/</string>
    <string name="btn_multi">*</string>
    <string name="tv_toast">Opening Calculator</string>
</resources>