<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Number2">

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="123dp"
        android:layout_height="67dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="multi"
        android:text="@string/btn_multi"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toEndOf="@+id/btn_division" />

    <Button
        android:id="@+id/btn_subs"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:onClick="subs"
        android:text="@string/btn_subs"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <TextView
        android:id="@+id/tv_n1"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_n1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/et_n1"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/tv_n1" />

    <TextView
        android:id="@+id/tv_n2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_n2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_n2"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toEndOf="@+id/tv_n2" />

    <TextView
        android:id="@+id/tv_n"
        android:layout_width="239dp"
        android:layout_height="65dp"
        android:layout_marginTop="84dp"
        android:text="@string/tv_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="126dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="56dp"
        android:onClick="division"
        android:text="@string/btn_division"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

</androidx.constraintlayout.widget.ConstraintLayout>