<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_n1"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_n1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/et_n1"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/tv_n1" />

    <TextView
        android:id="@+id/tv_n2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_n2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_n2"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toEndOf="@+id/tv_n2" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="141dp"
        android:layout_height="67dp"
        android:layout_marginTop="156dp"
        android:onClick="openSecond"
        android:text="@string/btn_ok"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />

</androidx.constraintlayout.widget.ConstraintLayout>